# simple_crawler

./: Cargo.toml  Dockerfile  README.md
src/: blocking.rs  concurrent.rs  lib.rs  non_blocking.rs  parallel.rs  utils.rs
tests/: integration-test.rs
